# uyghur

./: .gitignore  MANIFEST.in  README.md  README_zh.md  pyproject.toml  read_docx.py  tox.ini
tests/: test_conversion.py
uyghur/: __init__.py  conversion.py
